@@ -1,3 +1,10 @@
+2002-09-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* slabmatrixcache.h: Refactor to be useful in Section.
+	* slabmatrixcache.cpp: Ditto.
+	* generalslab.h: Ditto.
+	* generalslab.cpp: Ditto.
+
 2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* generalslab.h: Major change in the way PML is defined.
